# securecodebox-scanner-rust

./: .gitignore  README.md  notes.md  package-lock.json  report.json
examples/: README.md  demo-security-scan.yaml  findings.json  scan-rust-project.yaml  show-findings-summary.sh
helm/: Chart.yaml  values.yaml
helm/templates/: _helpers.tpl  parser-scan-type.yaml  scan-type.yaml
local_kubernetes/: README.md  demo-scan.yaml  demo-values.yaml  json-parser-for-demo.yaml  kind-cluster-demo.yaml
parser/: Dockerfile  package.json  parser.js
scanner/: Dockerfile  scanner.sh
tests/: README.md
tests/fixtures/security_demo/: Cargo.toml  deny.toml
tests/fixtures/security_demo/src/: main.rs
tests/fixtures/vulnerable_crate/: Cargo.toml
tests/integration/: test-full-integration.sh
